lib/tests/fixtures/compiler/evaluation/new_invalid_param_not_undef.pp
notice new(NotUndef[Class], 'Foo')
